--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
     "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "^7.0.0",
     "firebase": "^11.6.0",
-    "next": "^15.2.4",
+    "next": "^15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
