--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "^7.0.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "next": "^15.3.0",
