--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material-nextjs": "^7.0.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
